tests/rosetta/out/Fortran/calculating-the-value-of-e.error
gfortran: exit status 1
/tmp/calculating-the-value-of-e.f90:65:5:

   65 |     intPart = digits(0+1:(size(digits) - prec))
      |     1
Error: Unclassifiable statement at (1)
/tmp/calculating-the-value-of-e.f90:61:13:

   61 |     digits = s0
      |             1
Error: Cannot convert CHARACTER(100) to INTEGER(4) at (1)
/tmp/calculating-the-value-of-e.f90:63:15:

   63 |       digits = '0' // digits
      |               1
Error: Operands of string concatenation operator at (1) are CHARACTER(1)/INTEGER(4)
/tmp/calculating-the-value-of-e.f90:62:20:

   62 |     do while ((size(digits) <= prec))
      |                    1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/calculating-the-value-of-e.f90:67:15:

   67 |     res = trim(intPart // '.') // fracPart
      |               1
Error: Operands of string concatenation operator at (1) are INTEGER(4)/CHARACTER(1)
