tests/rosetta/out/Fortran/calculating-the-value-of-e.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:40Z
program calculating_the_value_of_e
  implicit none
  real :: epsilon
  integer :: factval
  real :: e
  integer :: n
  real :: term
    real :: r
    integer :: i
    integer :: scale
    integer :: scaled
    integer :: digits
    character(len=100) :: s0
    integer :: intPart
    integer :: fracPart
  epsilon = 1e-15
  factval = 1
  e = 2
  n = 2
  term = 1
  do while (.true.)
    factval = (factval * n)
    n = (n + 1)
    term = (1 / (real(factval)))
    e = (e + term)
    if ((absf(term) < epsilon)) then
      exit
    end if
  end do
  print *, 'e = ' // formatFloat(e,15)
  contains
  recursive real function absf(x) result(res)
    real, intent(in) :: x
    if ((x < 0)) then
      res = -x
      return
    end if
    res = x
    return
  end function absf
  recursive real function pow10(n) result(res)
    integer, intent(in) :: n
    r = 1
    i = 0
    do while ((i < n))
      r = (r * 10)
      i = (i + 1)
    end do
    res = r
    return
  end function pow10
  recursive character(len=100) function formatFloat(f,prec) result(res)
    real, intent(in) :: f
    integer, intent(in) :: prec
    scale = pow10(prec)
    scaled = (((f * scale)) + 0.5)
    n = (int(scaled))
    write(s0,'(G0)') n
    digits = s0
    do while ((size(digits) <= prec))
      digits = '0' // digits
    end do
    intPart = digits(0+1:(size(digits) - prec))
    fracPart = digits((size(digits) - prec)+1:size(digits))
    res = trim(intPart // '.') // fracPart
    return
  end function formatFloat
end program calculating_the_value_of_e
